Spacing & font fixes

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -103,6 +103,7 @@
 
   .qty-button
     +appearance(none)
+    color: $body-text-color
     display: flex
     align-items: center
     justify-content: center
@@ -146,25 +147,25 @@
       grid-area: 1 / 3 / 2 / 4
 
 .cart-footer
-  display: flex
-  flex-direction: column
-  align-items: flex-end
+  display: grid
   margin-top: 2rem
   gap: 2rem
 
-  @media (max-width: $break-small)
-    align-items: center
-
 .cart-subtotal
+  display: flex
+  gap: 16px
   font-size: 1.5em
+  margin-left: auto
 
-  &__amount
-    padding-left: 8px
+  @media screen and (max-width: $break-small)
+    margin: 0 auto
 
-.button--checkout
-  height: 3rem
-  min-width: 10rem
-  padding: 0 4rem
+.cart-submit
+  margin-left: auto
+  width: 240px
 
-  @media (max-width: $break-small)
+  @media screen and (max-width: $break-small)
+    width: 100%
+
+  button
     width: 100%
