--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -163,10 +163,9 @@ small
   border-radius: $border-radius
   color: $button-text-color
   cursor: pointer
-  font-size: 16px
   font-weight: 700
   padding: 0 32px
-  height: 50px
+  height: 54px
   text-align: center
   display: grid
   grid-template-rows: 1fr
@@ -245,7 +244,6 @@ textarea
 
   select
     color: inherit
-    font-size: 16px
     width: 100%
     padding: 0 32px 0 12px
     height: 100%
@@ -506,7 +504,6 @@ textarea
     font-weight: bold
     align-items: center
     gap: 12px
-    font-size: 16px
 
     svg
       height: 20px
@@ -556,7 +553,6 @@ textarea
 /* @end */
 
 .alert-message
-  font-size: 16px
   font-weight: normal
 
   a
