--- a/source/stylesheets/maintenance.sass
+++ b/source/stylesheets/maintenance.sass
@@ -16,6 +16,7 @@
 
     h1
       font-size: 2em
+      font-weight: 600
       margin: 0
 
     .maintenance-message
