--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -18,6 +18,7 @@
       max-width: 100%
 
     .product-image
+      border-radius: $border-radius
       height: auto
       width: 100%
 
@@ -36,11 +37,13 @@
         justify-content: flex-start
 
       .splide__slide
+        border-radius: $border-radius
         opacity: 0.8
         border: none !important
         aspect-ratio: 1 / 1
 
         img
+          border-radius: $border-radius
           border: 2px solid transparent !important
 
         &:hover
